--- a/code.ipynb
+++ b/code.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Nom : TAZZI karim"
+    "### Name : TAZZI karim"
    ]
   },
   {
